[gd_scene load_steps=8 format=1]

[ext_resource path="res://addons/on_screen_input/input_dock.gd" type="Script" id=1]
[ext_resource path="res://addons/on_screen_input/sprites/background.png" type="Texture" id=2]
[ext_resource path="res://addons/on_screen_input/sprites/bt_left.png" type="Texture" id=3]
[ext_resource path="res://addons/on_screen_input/sprites/bt_right.png" type="Texture" id=4]
[ext_resource path="res://addons/on_screen_input/sprites/bt_mid.png" type="Texture" id=5]
[ext_resource path="res://addons/on_screen_input/sprites/weel_up.png" type="Texture" id=6]
[ext_resource path="res://addons/on_screen_input/sprites/weel_down.png" type="Texture" id=7]

[node name="Last Input" type="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 222.0
margin/bottom = 322.0
alignment = 0
script/script = ExtResource( 1 )

[node name="bg" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 222.0
margin/bottom = 304.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="bt_left" type="TextureFrame" parent="bg"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="bt_right" type="TextureFrame" parent="bg"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="bt_mid" type="TextureFrame" parent="bg"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 5 )
stretch_mode = 6

[node name="weel_up" type="TextureFrame" parent="bg"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="weel_down" type="TextureFrame" parent="bg"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 7 )
stretch_mode = 6

[node name="text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 308.0
margin/right = 222.0
margin/bottom = 322.0
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


